src/backend/jit/mir.d

/**
 * mir.d — D bindings para a biblioteca MIR (vnmakarov/mir)
 *
 * Compile seu projeto com:
 *   ldc2 -betterC seu_arquivo.d mir.d -L-lmir -L-lm -L-ldl -L-lpthread
 *
 * ou linkando a libmir.a diretamente:
 *   ldc2 -betterC seu_arquivo.d mir.d /usr/local/lib/libmir.a -L-lm -L-ldl -L-lpthread
 */
module backend.jit.mir;

extern (C):

// =============================================================================
// mir-alloc.h
// =============================================================================

struct MIR_alloc
{
    void* function(void* alloc, size_t size) malloc;
    void* function(void* alloc, void* ptr, size_t size) realloc;
    void function(void* alloc, void* ptr) free;
    void* alloc_data;
}

alias MIR_alloc_t = MIR_alloc*;

// =============================================================================
// mir-code-alloc.h
// =============================================================================

struct MIR_code_alloc
{
    /* Opaque — usuário não precisa preencher; passe NULL para usar o padrão */
    void* _opaque;
}

alias MIR_code_alloc_t = MIR_code_alloc*;

// =============================================================================
// Tipos básicos  (mir.h)
// =============================================================================

alias MIR_scale_t = ubyte;
alias MIR_disp_t = long;
alias MIR_reg_t = uint;
alias MIR_alias_t = uint;
alias MIR_name_t = const(char)*;

enum MIR_MAX_SCALE = ubyte.max;
enum MIR_MAX_REG_NUM = uint.max;
enum MIR_NON_VAR = MIR_MAX_REG_NUM;

enum MIR_API_VERSION = 0.2;

// =============================================================================
// MIR_error_type_t
// =============================================================================

enum MIR_error_type_t : int
{
    MIR_no_error,
    MIR_syntax_error,
    MIR_binary_io_error,
    MIR_alloc_error,
    MIR_finish_error,
    MIR_no_module_error,
    MIR_nested_module_error,
    MIR_no_func_error,
    MIR_func_error,
    MIR_vararg_func_error,
    MIR_nested_func_error,
    MIR_wrong_param_value_error,
    MIR_hard_reg_error,
    MIR_reserved_name_error,
    MIR_import_export_error,
    MIR_undeclared_func_reg_error,
    MIR_repeated_decl_error,
    MIR_reg_type_error,
    MIR_wrong_type_error,
    MIR_unique_reg_error,
    MIR_undeclared_op_ref_error,
    MIR_ops_num_error,
    MIR_call_op_error,
    MIR_unspec_op_error,
    MIR_wrong_lref_error,
    MIR_ret_error,
    MIR_op_mode_error,
    MIR_out_op_error,
    MIR_invalid_insn_error,
    MIR_ctx_change_error,
}

alias MIR_error_func_t = void function(MIR_error_type_t error_type, const(char)* format, ...);

// =============================================================================
// MIR_insn_code_t
// =============================================================================

enum MIR_insn_code_t : int
{
    // Moves
    MIR_MOV,
    MIR_FMOV,
    MIR_DMOV,
    MIR_LDMOV,
    // Extensions
    MIR_EXT8,
    MIR_EXT16,
    MIR_EXT32,
    MIR_UEXT8,
    MIR_UEXT16,
    MIR_UEXT32,
    // Int <-> float conversions
    MIR_I2F,
    MIR_I2D,
    MIR_I2LD,
    MIR_UI2F,
    MIR_UI2D,
    MIR_UI2LD,
    MIR_F2I,
    MIR_D2I,
    MIR_LD2I,
    MIR_F2D,
    MIR_F2LD,
    MIR_D2F,
    MIR_D2LD,
    MIR_LD2F,
    MIR_LD2D,
    // Unary
    MIR_NEG,
    MIR_NEGS,
    MIR_FNEG,
    MIR_DNEG,
    MIR_LDNEG,
    MIR_ADDR,
    MIR_ADDR8,
    MIR_ADDR16,
    MIR_ADDR32,
    // Aritmética
    MIR_ADD,
    MIR_ADDS,
    MIR_FADD,
    MIR_DADD,
    MIR_LDADD,
    MIR_SUB,
    MIR_SUBS,
    MIR_FSUB,
    MIR_DSUB,
    MIR_LDSUB,
    MIR_MUL,
    MIR_MULS,
    MIR_FMUL,
    MIR_DMUL,
    MIR_LDMUL,
    MIR_DIV,
    MIR_DIVS,
    MIR_UDIV,
    MIR_UDIVS,
    MIR_FDIV,
    MIR_DDIV,
    MIR_LDDIV,
    MIR_MOD,
    MIR_MODS,
    MIR_UMOD,
    MIR_UMODS,
    // Lógica
    MIR_AND,
    MIR_ANDS,
    MIR_OR,
    MIR_ORS,
    MIR_XOR,
    MIR_XORS,
    MIR_LSH,
    MIR_LSHS,
    MIR_RSH,
    MIR_RSHS,
    MIR_URSH,
    MIR_URSHS,
    // Comparação
    MIR_EQ,
    MIR_EQS,
    MIR_FEQ,
    MIR_DEQ,
    MIR_LDEQ,
    MIR_NE,
    MIR_NES,
    MIR_FNE,
    MIR_DNE,
    MIR_LDNE,
    MIR_LT,
    MIR_LTS,
    MIR_ULT,
    MIR_ULTS,
    MIR_FLT,
    MIR_DLT,
    MIR_LDLT,
    MIR_LE,
    MIR_LES,
    MIR_ULE,
    MIR_ULES,
    MIR_FLE,
    MIR_DLE,
    MIR_LDLE,
    MIR_GT,
    MIR_GTS,
    MIR_UGT,
    MIR_UGTS,
    MIR_FGT,
    MIR_DGT,
    MIR_LDGT,
    MIR_GE,
    MIR_GES,
    MIR_UGE,
    MIR_UGES,
    MIR_FGE,
    MIR_DGE,
    MIR_LDGE,
    // Overflow
    MIR_ADDO,
    MIR_ADDOS,
    MIR_SUBO,
    MIR_SUBOS,
    MIR_MULO,
    MIR_MULOS,
    MIR_UMULO,
    MIR_UMULOS,
    // Branches
    MIR_JMP,
    MIR_BT,
    MIR_BTS,
    MIR_BF,
    MIR_BFS,
    MIR_BEQ,
    MIR_BEQS,
    MIR_FBEQ,
    MIR_DBEQ,
    MIR_LDBEQ,
    MIR_BNE,
    MIR_BNES,
    MIR_FBNE,
    MIR_DBNE,
    MIR_LDBNE,
    MIR_BLT,
    MIR_BLTS,
    MIR_UBLT,
    MIR_UBLTS,
    MIR_FBLT,
    MIR_DBLT,
    MIR_LDBLT,
    MIR_BLE,
    MIR_BLES,
    MIR_UBLE,
    MIR_UBLES,
    MIR_FBLE,
    MIR_DBLE,
    MIR_LDBLE,
    MIR_BGT,
    MIR_BGTS,
    MIR_UBGT,
    MIR_UBGTS,
    MIR_FBGT,
    MIR_DBGT,
    MIR_LDBGT,
    MIR_BGE,
    MIR_BGES,
    MIR_UBGE,
    MIR_UBGES,
    MIR_FBGE,
    MIR_DBGE,
    MIR_LDBGE,
    MIR_BO,
    MIR_UBO,
    MIR_BNO,
    MIR_UBNO,
    MIR_LADDR,
    MIR_JMPI,
    // Calls
    MIR_CALL,
    MIR_INLINE,
    MIR_JCALL,
    MIR_SWITCH,
    MIR_RET,
    MIR_JRET,
    // Misc
    MIR_ALLOCA,
    MIR_BSTART,
    MIR_BEND,
    MIR_VA_ARG,
    MIR_VA_BLOCK_ARG,
    MIR_VA_START,
    MIR_VA_END,
    MIR_LABEL,
    MIR_UNSPEC,
    MIR_PRSET,
    MIR_PRBEQ,
    MIR_PRBNE,
    MIR_USE,
    MIR_PHI,
    MIR_INVALID_INSN,
    MIR_INSN_BOUND,
}

// =============================================================================
// MIR_type_t
// =============================================================================

enum MIR_BLK_NUM = 5;

enum MIR_type_t : int
{
    MIR_T_I8,
    MIR_T_U8,
    MIR_T_I16,
    MIR_T_U16,
    MIR_T_I32,
    MIR_T_U32,
    MIR_T_I64,
    MIR_T_U64,
    MIR_T_F,
    MIR_T_D,
    MIR_T_LD,
    MIR_T_P,
    MIR_T_BLK,
    MIR_T_RBLK = MIR_T_BLK + MIR_BLK_NUM,
    MIR_T_UNDEF,
    MIR_T_BOUND,
}

bool MIR_int_type_p(MIR_type_t t) pure
{
    return (MIR_type_t.MIR_T_I8 <= t && t <= MIR_type_t.MIR_T_U64)
        || t == MIR_type_t.MIR_T_P;
}

bool MIR_fp_type_p(MIR_type_t t) pure
{
    return MIR_type_t.MIR_T_F <= t && t <= MIR_type_t.MIR_T_LD;
}

bool MIR_blk_type_p(MIR_type_t t) pure
{
    return MIR_type_t.MIR_T_BLK <= t && t < MIR_type_t.MIR_T_RBLK;
}

// =============================================================================
// Structs de operandos
// =============================================================================

struct MIR_mem_t
{
    ubyte       type;     // MIR_type_t : 8
    MIR_scale_t scale;    // ubyte
    ushort      _pad;     // alinha alias_ em offset 4
    MIR_alias_t alias_;
    MIR_alias_t nonalias;
    uint        nloc;
    MIR_reg_t   base;
    MIR_reg_t   index;
    MIR_disp_t  disp;
}

struct MIR_str_t
{
    size_t len;
    const(char)* s;
}

union MIR_imm_t
{
    long i;
    ulong u;
    float f;
    double d;
    real ld;
}

// Forward declarations (structs opacos)
struct MIR_insn;
struct MIR_item;
struct MIR_module;
struct MIR_context;

alias MIR_label_t = MIR_insn*;
alias MIR_item_t = MIR_item*;
alias MIR_module_t = MIR_module*;
alias MIR_context_t = MIR_context*;
alias MIR_insn_t = MIR_insn*;

// =============================================================================
// MIR_op_mode_t  e  MIR_op_t
// =============================================================================

enum MIR_op_mode_t : int
{
    MIR_OP_UNDEF,
    MIR_OP_REG,
    MIR_OP_VAR,
    MIR_OP_INT,
    MIR_OP_UINT,
    MIR_OP_FLOAT,
    MIR_OP_DOUBLE,
    MIR_OP_LDOUBLE,
    MIR_OP_REF,
    MIR_OP_STR,
    MIR_OP_MEM,
    MIR_OP_VAR_MEM,
    MIR_OP_LABEL,
    MIR_OP_BOUND,
}

union MIR_op_u
{
    MIR_reg_t reg;
    MIR_reg_t var;
    long i;
    ulong u;
    float f;
    double d;
    real ld;
    MIR_item_t ref_;
    MIR_str_t str;
    MIR_mem_t mem;
    MIR_mem_t var_mem;
    MIR_label_t label;
}

struct MIR_op_t
{
    void*   data;
    ubyte   mode;       // MIR_op_mode_t : 8
    ubyte   value_mode; // MIR_op_mode_t : 8
    ubyte[6] _pad;      // padding até offset 16
    MIR_op_u u;         // offset 16, 32 bytes
}

// =============================================================================
// MIR_var_t
// =============================================================================

struct MIR_var_t
{
    MIR_type_t type;
    const(char)* name;
    size_t size;
}

// =============================================================================
// MIR_val_t  (intérprete)
// =============================================================================

union MIR_val_t
{
    MIR_insn_code_t ic;
    void* a;
    long i;
    ulong u;
    float f;
    double d;
    real ld;
}

// =============================================================================
// MIR_item_type_t
// =============================================================================

enum MIR_item_type_t : int
{
    MIR_func_item,
    MIR_proto_item,
    MIR_import_item,
    MIR_export_item,
    MIR_forward_item,
    MIR_data_item,
    MIR_ref_data_item,
    MIR_lref_data_item,
    MIR_expr_data_item,
    MIR_bss_item,
}

// =============================================================================
// MIR_code_reloc_t
// =============================================================================

struct MIR_code_reloc_t
{
    size_t offset;
    const void* value;
}

// =============================================================================
// _MIR_arg_desc_t
// =============================================================================

struct _MIR_arg_desc_t
{
    MIR_type_t type;
    size_t size;
}

// =============================================================================
// API pública — mir.h
// =============================================================================

// Versão e inicialização
double _MIR_get_api_version();
MIR_context_t _MIR_init(MIR_alloc_t alloc, MIR_code_alloc_t code_alloc);

// Wrapper seguro (verifica versão)
MIR_context_t MIR_init2(MIR_alloc_t alloc, MIR_code_alloc_t code_alloc)
{
    import core.stdc.stdio : fprintf, stderr;
    import core.stdc.stdlib : exit;

    if (MIR_API_VERSION != _MIR_get_api_version())
    {
        fprintf(stderr, "mir.d: versão incompatível com a libmir instalada!\n");
        exit(1);
    }
    return _MIR_init(alloc, code_alloc);
}

MIR_context_t MIR_init()
{
    return MIR_init2(null, null);
}

void MIR_finish(MIR_context_t ctx);

// Módulos
MIR_module_t MIR_new_module(MIR_context_t ctx, const(char)* name);
void MIR_finish_module(MIR_context_t ctx);
void MIR_load_module(MIR_context_t ctx, MIR_module_t m);
void MIR_load_external(MIR_context_t ctx, const(char)* name, void* addr);
void MIR_link(MIR_context_t ctx,
    void function(MIR_context_t, MIR_item_t) set_interface,
    void* function(const(char)*) import_resolver);
MIR_item_t MIR_get_global_item(MIR_context_t ctx, const(char)* name);
void MIR_change_module_ctx(MIR_context_t old_ctx, MIR_module_t m, MIR_context_t new_ctx);
